<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DailyRecordFragment">

    <ScrollView
        android:id="@+id/scrollview_daily_record"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_question_1"
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/edit_text_question_1"
                android:text="@string/question_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_question_1"
                style="@style/question_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edit_text_q_1"
                android:inputType="textShortMessage"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_question_1" />

            <View
                android:id="@+id/divider_question_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_question_1" />

            <TextView
                android:id="@+id/text_question_2"
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/slider_question_2"
                android:text="@string/question_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_question_2" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="10"
                app:tickVisible="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_question_2" />

            <View
                android:id="@+id/divider_question_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/slider_question_2" />

            <TextView
                android:id="@+id/text_question_3"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_question_3" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/toggle_question_3"
                style="@style/question_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/text_question_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_question_3" />

            <View
                android:id="@+id/divider_question_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggle_question_3" />

            <TextView
                android:id="@+id/text_question_4"
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/edit_text_question_4"
                android:text="@string/question_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_question_4" />

            <EditText
                android:id="@+id/edit_text_question_4"
                style="@style/question_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edit_text_q_4"
                android:inputType="text"
                android:textColorHint="#757575"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_question_4" />

            <View
                android:id="@+id/divider_question_5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_question_4" />

            <TextView
                android:id="@+id/text_question_5"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_question_5" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/toggle_question_5"
                style="@style/question_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/text_question_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_question_5" />

            <View
                android:id="@+id/divider_question_6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggle_question_5" />

            <TextView
                android:id="@+id/text_question_6"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_question_6" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/toggle_question_6"
                style="@style/question_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/text_question_6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_question_6" />

            <View
                android:id="@+id/divider_question_7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggle_question_6" />

            <TextView
                android:id="@+id/text_question_7"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_question_7" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/toggle_question_7"
                style="@style/question_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/text_question_7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_question_7" />

            <View
                android:id="@+id/divider_question_8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggle_question_7" />

            <TextView
                android:id="@+id/text_question_8"
                style="@style/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_text_question_8"
                android:text="@string/question_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_question_8" />

            <EditText
                android:id="@+id/edit_text_question_8"
                style="@style/question_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edit_text_q_8"
                android:inputType="text"
                android:textColorHint="#757575"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_question_8" />

            <View
                android:id="@+id/divider_question_9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_question_8" />

            <TextView
                android:id="@+id/text_question_9"
                style="@style/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_question_9" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/toggle_question_9"
                style="@style/question_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/text_question_9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_question_9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_submit_daily_record"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:minHeight="32dp"
        android:text="@string/submit" />

</LinearLayout>